# amd-ucode-container

./: README.md  pyproject.toml
.github/workflows/: build.yml  codeql.yml  scorecard.yml
src/amd_ucode_container/: banner.py  cli_extract.py  cli_info.py  extract.py
src/amd_ucode_container/structures/: amd_ucode_container.py  equiv_cpu_section.py  file_section.py  ucode_section.py
