[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "amd-ucode-container"
dynamic = ["version"]
authors = [
  { name="Antonio Vázquez Blanco", email="antoniovazquezblanco@gmail.com" },
  { name="Kaya Erchiran" },
]
description = "A Python library for parsing and interpreting AMD microcode container files"
readme = "README.md"
requires-python = ">=3.0"
license = "GPL-2.0-or-later"
license-files = ["LICENSE.md"]
keywords = ["amd", "microcode", "ucode", "container", "linux", "kernel"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: System :: Hardware",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
]
dependencies = [
]

[project.urls]
Homepage = "https://github.com/amd-zenith/amd-ucode-container"
Repository = "https://github.com/amd-zenith/amd-ucode-container"
Issues = "https://github.com/amd-zenith/amd-ucode-container/issues"

[project.scripts]
amd_ucode_container_info = "amd_ucode_container.cli_info:main"
amd_ucode_container_extract = "amd_ucode_container.cli_extract:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/amd_ucode_container"]
